link to deck lighting

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </style>
 </head>
 <body>
+<h1>Lights</h1>
+<a href="decklighting/index.html">Click here</a> to use the new, fabulous, funky lighting webapp.
 <h1>Minecraft</h1>
 <p>
 <a href="MinecraftDome/index.html">MinecraftDome</a> - a javascript webapp for generating dome shapes.
