--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </style>
 </head>
 <body>
+<h1>3d Printing</h1>
+<a href="3dprinting/PrinterPic.jar">Click here</a> to download the amazing image-to-gcode app.
 <h1>Lights</h1>
 <a href="decklighting/index.html">Click here</a> to use the new, fabulous, funky lighting webapp.
 <h1>Minecraft</h1>
