--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 <p ><span ><a href="ageofworms/index.html">Age of Worms pages</a></span></p>
 <p ><span ><a href="imanages/mc.png">MC Screenshot</a></span></p>
 
+<h3>Battlemat Grids:<h3>
+<p>
+<a href="grid/a1Grid.svg">a1Grid.svg</a> <a href="grid/a1Grid.pdf">a1Grid.pdf</a> 
+<a href="grid/a2Grid.svg">a2Grid.svg</a> <a href="grid/a2Grid.pdf">a2Grid.pdf</a> 
+<a href="grid/a3Grid.svg">a3Grid.svg</a> <a href="grid/a3Grid.pdf">a3Grid.pdf</a> 
+<a href="grid/a4Grid.svg">a4Grid.svg</a> <a href="grid/a4Grid.pdf">a4Grid.pdf</a> 
+</p>
+<p>
+I get these printed at OfficeWorks and ask for the "architectural drawing" rate, which is way, way cheaper than full colour. Make sure you get them printed at 100% scale - the sizes are correct. Then I colour the paper with cheap watercolour or instant coffee, and back to officeworks to get laminated. Whiteboard marker wipes off, sometimes you need a little isopropyl. About $20 for a a1-sized battlemat that you can use for years.
+</p>
 </body>
 </html>
 
