--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p ><span ><a href="ageofworms/index.html">Age of Worms pages</a></span></p>
 <p ><span ><a href="imanages/mc.png">MC Screenshot</a></span></p>
 
-<h3>Battlemat Grids:<h3>
+<h3>Battlemat Grids:</h3>
 <p>
 <a href="grid/a1Grid.svg">a1Grid.svg</a> <a href="grid/a1Grid.pdf">a1Grid.pdf</a> 
 <a href="grid/a2Grid.svg">a2Grid.svg</a> <a href="grid/a2Grid.pdf">a2Grid.pdf</a> 
