--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </style>
 </head>
 <body>
+<h1>Wordle</h1>
+<a href="wordle3/index.html">Solver</a> for Wordle and Lewdle. An inquiry into monads, not gonads, as a look at the source will confirm. NSFW.
 <h1>3d Printing</h1>
 <a href="3dprinting/PrinterPic.jar">Click here</a> to download the amazing image-to-gcode app.
 <h1>Lights</h1>
