--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </style>
 </head>
 <body>
+<h1>Serpent's Skull</h1>
+<p><a href="ss/index.html">New game</a>, peeps.</p>
 <h1>Wordle</h1>
 <a href="wordle3/index.html">Solver</a> for Wordle and Lewdle. An inquiry into monads, not gonads, as a look at the source will confirm. NSFW.
 <h1>3d Printing</h1>
