--- a/wordle3/index.html
+++ b/wordle3/index.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="nytUncommonWords.js"></script>
 
 <!-- Scripts  -->
+<script type="text/javascript" src="plumbing.js"></script>
 <script type="text/javascript" src="wordle.js"></script>
 <script type="text/javascript" src="gui.js"></script>
 <script type="text/javascript" src="game.js"></script>
