--- a/MICGenerator.html
+++ b/MICGenerator.html
@@ -2,6 +2,7 @@
 <head>
 <title>Magic Item Compendium treasure generator</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <!-- 
 	This HTML file is an implementation of the treasure generator in the Magic Item Compendium. The MIC is
 	copyright (c) Wizards of the Coast, is probably now owned by Hasbro, and the data therin is used without permission.
