--- a/ss/2022-10-15.html
+++ b/ss/2022-10-15.html
@@ -62,7 +62,7 @@
 				</tr>
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">2504</td>
+					<td class="gt">2514</td>
 				</tr>
 			</table>
 		</div>
@@ -86,7 +86,7 @@
 			<table width="100%">
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">2504</td>
+					<td class="gt">2514</td>
 				</tr>
 				<tr>
 					<td>Explored hex &times; 10</td>
@@ -95,7 +95,7 @@
 				</tr>
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">2604</td>
+					<td class="gt">2614</td>
 				</tr>
 			</table>
 		</div>
@@ -109,7 +109,7 @@
 			<table width="100%">
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">2604</td>
+					<td class="gt">2614</td>
 				</tr>
 				<tr>
 					<td>Explored hex &times; 8</td>
@@ -133,11 +133,11 @@
 				</tr>
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">300</td>
+					<td class="total">300</td>
 				</tr>
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">2904</td>
+					<td class="gt">2914</td>
 				</tr>
 			</table>
 		</div>
@@ -166,7 +166,7 @@
 			<table width="100%">
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">2904</td>
+					<td class="gt">2914</td>
 				</tr>
 				<tr>
 					<td>Explored hex &times; 1</td>
@@ -189,7 +189,7 @@
 				</tr>
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">3094</td>
+					<td class="gt">3104</td>
 				</tr>
 			</table>
 		</div>
