--- a/ss/index.html
+++ b/ss/index.html
@@ -11,7 +11,7 @@
 
 <script type="text/javascript">
 
-const pages = ['2022-09-15', '2022-09-27', '2022-10-04', '2022-10-15', '2022-10-18'];
+const pages = ['2022-09-15', '2022-09-27', '2022-10-04', '2022-10-15', '2022-10-18', '2022-10-26'];
 
 const lastPage = pages.length-1;
 
