OK, basic stats get.

--- a/ss/index.html
+++ b/ss/index.html
@@ -129,6 +129,11 @@ $(()=>{
 	color: #102040;
 }
 
+.situational-modifier { margin-left: 1em; font-size:80%; font-family: serif;}
+.description {font-size:80%; font-family: serif;}
+.health { font-size: 125%; margin: .5em 0; } 
+.health .hp { border: thin solid  #102040; padding: .25em; } 
+.characterpage table {font-family: serif;}
 </style>
 
 <script type="text/javascript">
