working with descriptions

--- a/ss/index.html
+++ b/ss/index.html
@@ -134,6 +134,10 @@ $(()=>{
 .health { font-size: 125%; margin: .5em 0; } 
 .health .hp { border: thin solid  #102040; padding: .25em; } 
 .characterpage table {font-family: serif;}
+.ac .summary { font-size: 125%; margin: .5em 0; } 
+.ac .summary span { border: thin solid  #102040; padding: .25em; } 
+.init .summary { font-size: 125%; margin: .5em 0; } 
+.init .summary span { border: thin solid  #102040; padding: .25em; } 
 </style>
 
 <script type="text/javascript">
