--- a/ss/index.html
+++ b/ss/index.html
@@ -13,7 +13,7 @@
 
 $.ajaxSetup({ cache: false });
 
-const pages = ['2022-09-15', '2022-09-27', '2022-10-04', '2022-10-15', '2022-10-18', '2022-10-26'];
+const pages = ['2022-09-15', '2022-09-27', '2022-10-04', '2022-10-15', '2022-10-18', '2022-10-26', '2022-11-02'];
 
 const lastPage = pages.length-1;
 
