--- a/ss/index.html
+++ b/ss/index.html
@@ -130,7 +130,7 @@ $(()=>{
 }
 
 .situational-modifier { margin-left: 1em; font-size:80%; font-family: serif;}
-.description {font-size:80%; font-family: serif;}
+.description {font-size:80%; font-family: serif; white-space: pre-wrap;}
 .health { font-size: 125%; margin: .5em 0; } 
 .health .hp { border: thin solid  #102040; padding: .25em; } 
 .characterpage table {font-family: serif;}
