--- a/ss/index.html
+++ b/ss/index.html
@@ -138,6 +138,8 @@ $(()=>{
 .ac .summary span { border: thin solid  #102040; padding: .25em; } 
 .init .summary { font-size: 125%; margin: .5em 0; } 
 .init .summary span { border: thin solid  #102040; padding: .25em; } 
+.spell {display: inline-block; margin-right: 1em;}
+.spellblock {font-size:80%; font-family: serif;}
 </style>
 
 <script type="text/javascript">
