--- a/ss/2022-12-06.html
+++ b/ss/2022-12-06.html
@@ -308,7 +308,40 @@
 			their way to the cavern of unbirth. Nix and Ishirou quickly dealt
 			with the ghoul, for which the party will not be getting XP, and
 			hoisted the party out.</p>
-		<p class="ooc">OK, guys, it's 11, and I have started drinking.
+			
+		<div class="xp">
+			<table width="100%">
+				<tr>
+					<td colspan="2"></td>
+					<td class="gt">8811</td>
+				</tr>
+				<tr>
+					<td class="date" colspan=3>Day 52</td>
+				</tr>
+				<tr>
+					<td class="scene" colspan=3>The Siege</td>
+				</tr>
+				<tr>
+					<td>Ghoul &times; 3</td>
+					<td class="r">1200</td>
+					<td class="r">300</td>
+				</tr>
+				<tr>
+					<td>Mother Thrunefang</td>
+					<td class="r">1200</td>
+					<td class="r">300</td>
+				</tr>
+				<tr>
+					<td colspan="2"></td>
+					<td class="total">600</td>
+				</tr>
+				<tr>
+					<td colspan="2"></td>
+					<td class="gt">9411</td>
+				</tr>
+			</table>
+		</div>
+				<p class="ooc">OK, guys, it's 11, and I have started drinking.
 			This is going to get compressed.</p>
 		<p>Everyone decides to occupy the lighthouse, which can be
 			fortified. Snid wedges the doors. At midnight, Nylithati and her
